sync: hosted cloud (#1540)
Submit a pull request for this project.

<!-- If you have an Issue that related to this Pull Request, you can
copy this Issue's description -->

# Why? 
<!-- 
> Related to which issue?
> Why we need this pull request?
> What is the user story for this pull request? 
-->


# What?
<!-- 
> Can you describe this feature in detail?
> Who can benefit from it? 
-->


# How?
<!-- 
> Do you have a simple description of how this pull request is
implemented?
-->

---------

Co-authored-by: Guofeng Chen <66124783+functionChenGuoFeng@users.noreply.github.com>
Co-authored-by: Kilian <wangkailang@users.noreply.github.com>
Co-authored-by: Zoe <zhengxu@apitable.com>
Co-authored-by: Zoe <13400804+zoe-icu@users.noreply.github.com>
Co-authored-by: Caedman Ziwen Lan <lanziwen@apitable.com>
Co-authored-by: Harry Yep <git@hode.co.uk>
Co-authored-by: XuKecheng <wsad8254695@outlook.com>
Co-authored-by: xukecheng <xukecheng@aitable.ai>
Co-authored-by: Shawn Deng <dengguiheng@apitable.com>
Co-authored-by: William Chan <root@williamchan.me>
Co-authored-by: ShawnDeng <dengguiheng@aitable.ai>
Co-authored-by: wangkailang <wangkailang@vikadata.com>
Co-authored-by: Michael Xiaoliang Chan <111508006+yo-ooiii@users.noreply.github.com>
Co-authored-by: Evie Wanmei Huang <37546178+wmEvie@users.noreply.github.com>
Co-authored-by: Chalme Cheng Peng <pc.chalme@gmail.com>
Co-authored-by: Aria <sujian@apitable.com>
Co-authored-by: Robot Ye Chen <262000730@qq.com>
Co-authored-by: Jover Zhang <joverzh@gmail.com>
Co-authored-by: ziqiang <zhaoziqiang@vikadata.com>
Co-authored-by: vac (Brendan) <wangjintao@apitable.com>
Co-authored-by: jeremyyin <jeremyyin2012@gmail.com>